fix: Correct img overflow issue

--- a/src/components/CallToAction/CallToAction.css
+++ b/src/components/CallToAction/CallToAction.css
@@ -13,7 +13,6 @@
         aspect-ratio: 1;
         object-fit: cover;
         object-position: center;
-        overflow: visible;
         position: relative;
         top: 15%;
         align-self: center;
